<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/yearMonth_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:focusable="false"
        />

    <TextView
        android:id="@+id/total_month_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/yearMonth_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="2021年7月累計結果"
        android:textSize="14sp"
        android:textColor="@color/black"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/total_month_enclosure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/total_month_title"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        android:layout_marginTop="5dp"
        android:background="@color/light_yellow"
        >

   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/total_month_layout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="@+id/total_month_enclosure"
       app:layout_constraintBottom_toBottomOf="@+id/total_month_enclosure"
       app:layout_constraintStart_toStartOf="@+id/total_month_enclosure"
       app:layout_constraintEnd_toEndOf="@+id/total_month_enclosure"
       android:layout_marginStart="16dp"
       android:layout_marginEnd="16dp"
       android:layout_marginTop="20dp"
       android:layout_marginBottom="20dp"
       android:background="@color/white">
       
       <TextView
           android:id="@+id/target_amount_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toTopOf="@+id/total_month_layout"
           app:layout_constraintStart_toStartOf="@+id/total_month_layout"
           android:layout_marginTop="15dp"
           android:layout_marginStart="100dp"
           android:text="@string/target_amount"
           android:textColor="@color/black"
           android:textSize="14sp"/>

       <TextView
           android:id="@+id/target_amount"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toTopOf="@+id/target_amount_title"
           app:layout_constraintStart_toEndOf="@+id/target_amount_title"
           android:layout_marginTop="0dp"
           android:layout_marginStart="30dp"
           android:textColor="@color/black"
           android:textSize="14sp"
           android:maxLines="1"
           tools:text="￥600,000"
           />


       <TextView
           android:id="@+id/total_sales_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/target_amount_title"
           app:layout_constraintStart_toStartOf="@+id/total_month_layout"
           android:layout_marginTop="15dp"
           android:layout_marginStart="100dp"
           android:text="@string/total_sales"
           android:textColor="@color/black"
           android:textSize="14sp"/>

       <TextView
           android:id="@+id/total_sales"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toTopOf="@+id/total_sales_title"
           app:layout_constraintStart_toEndOf="@+id/total_sales_title"
           android:layout_marginTop="0dp"
           android:layout_marginStart="30dp"
           android:textColor="@color/black"
           android:textSize="14sp"
           android:maxLines="1"
           tools:text="￥600,000"
           />

       <TextView
           android:id="@+id/average_sales_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/total_sales_title"
           app:layout_constraintStart_toStartOf="@+id/total_month_layout"
           android:layout_marginTop="15dp"
           android:layout_marginStart="100dp"
           android:text="@string/average_sales"
           android:textColor="@color/black"
           android:textSize="14sp"/>

       <TextView
           android:id="@+id/average_sales"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toTopOf="@+id/average_sales_title"
           app:layout_constraintStart_toEndOf="@+id/average_sales_title"
           android:layout_marginTop="0dp"
           android:layout_marginStart="30dp"
           android:textColor="@color/black"
           android:textSize="14sp"
           android:maxLines="1"
           tools:text="￥80,000"
           />

       <TextView
           android:id="@+id/total_times_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/average_sales_title"
           app:layout_constraintStart_toStartOf="@+id/total_month_layout"
           android:layout_marginTop="15dp"
           android:layout_marginStart="100dp"
           android:text="@string/total_times"
           android:textColor="@color/black"
           android:textSize="14sp"/>

       <TextView
           android:id="@+id/total_times"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toTopOf="@+id/total_times_title"
           app:layout_constraintStart_toEndOf="@+id/total_times_title"
           android:layout_marginTop="0dp"
           android:layout_marginStart="30dp"
           android:textColor="@color/black"
           android:textSize="14sp"
           android:maxLines="1"
           tools:text="365回"
           />

       <TextView
           android:id="@+id/average_times_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/total_times_title"
           app:layout_constraintStart_toStartOf="@+id/total_month_layout"
           app:layout_constraintBottom_toBottomOf="@+id/total_month_layout"
           android:layout_marginBottom="15dp"
           android:layout_marginTop="15dp"
           android:layout_marginStart="100dp"
           android:text="@string/average_times"
           android:textColor="@color/black"
           android:textSize="14sp"/>

       <TextView
           android:id="@+id/average_times"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toTopOf="@+id/average_times_title"
           app:layout_constraintStart_toEndOf="@+id/average_times_title"
           android:layout_marginTop="0dp"
           android:layout_marginStart="30dp"
           android:textColor="@color/black"
           android:textSize="14sp"
           android:maxLines="1"
           tools:text="40回"
           />
       
       

</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/total_month_enclosure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>